# pktscope

./: .gitignore  Cargo.toml  LICENSE  MANUAL_TESTING.md  README.md  plan.md
.github/workflows/: ci.yml
crates/pktscope/: Cargo.toml
crates/pktscope-core/: Cargo.toml
crates/pktscope-core/src/: error.rs  identity.rs  lib.rs
crates/pktscope-core/src/alert/: baseline.rs  detectors.rs  mod.rs
crates/pktscope-core/src/analysis/: anomaly.rs  mod.rs
crates/pktscope-core/src/capture/: live.rs  mod.rs
crates/pktscope-core/src/decode/: dns.rs  http.rs  http2.rs  icmp.rs  ipv6.rs  ja.rs  mod.rs  quic.rs  tcp.rs  tls.rs  tls_sni.rs
crates/pktscope-core/src/diff/: mod.rs
crates/pktscope-core/src/enrich/: geoip.rs  mod.rs  names.rs
crates/pktscope-core/src/filter/: ast.rs  eval.rs
crates/pktscope-core/src/flow/: dns_tracker.rs  mod.rs  reassembly.rs  stats.rs  tracker.rs
crates/pktscope-core/src/inspector/: mod.rs  state.rs
crates/pktscope-core/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
crates/pktscope-core/src/monitor/: correlate.rs  daemonize.rs  mod.rs  paths.rs
crates/pktscope-core/src/notify/: mod.rs
crates/pktscope-core/src/output/: json.rs  mod.rs  pcapng_writer.rs
crates/pktscope-core/src/process/: linux.rs  macos.rs  mod.rs  windows.rs
crates/pktscope-core/src/storage/: ring.rs
crates/pktscope-core/src/store/: mod.rs  models.rs  schema.rs
crates/pktscope-core/tests/: integration.rs
crates/pktscope/src/: cli.rs  config.rs  main.rs  permissions.rs
crates/pktscope/src/inspect/: mod.rs
crates/pktscope/src/tui/: detail_tree.rs  filter_bar.rs  hex_view.rs  mod.rs  packet_list.rs  views.rs
scripts/: fetch-geoip.sh
src/: cli.rs  error.rs  lib.rs  main.rs  permissions.rs
src/capture/: file.rs  live.rs  mod.rs
src/decode/: arp.rs  dns_question.rs  ethernet.rs  icmpv6.rs  ipv4.rs  mod.rs  tls_sni.rs  udp.rs
src/filter/: eval.rs  parser.rs
src/flow/: mod.rs  tracker.rs
src/output/: json.rs  mod.rs  pcap_writer.rs
src/process/: linux.rs  mod.rs  stub.rs
src/tui/: detail_tree.rs  hex_view.rs  mod.rs  packet_list.rs
tests/: integration.rs
