[package]
name = "pktscope"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A Wireshark-style terminal packet analyzer — lightweight, keyboard-driven, scriptable Wireshark alternative for the terminal"
license = "MIT"
repository = "https://github.com/richer-richard/pktscope"
homepage = "https://github.com/richer-richard/pktscope"
readme = "README.md"
keywords = ["packet-analyzer", "network", "tui", "pcap", "wireshark"]
categories = ["command-line-utilities", "network-programming"]
exclude = [
    "tests/fixtures/*",
    ".claude/",
    ".github/",
]

[dependencies]
pcap = "2"
ratatui = "0.29"
crossterm = "0.28"
nom = "7"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
