[workspace]
resolver = "2"
members = ["crates/pktscope-core", "crates/pktscope"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/richer-richard/pktscope"
homepage = "https://github.com/richer-richard/pktscope"

[workspace.dependencies]
pcap = "2"
ratatui = "0.29"
crossterm = "0.28"
nom = "7"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
tempfile = "3"
md-5 = "0.10"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
maxminddb = "0.24"
dirs = "5"
